2004-09-29 [paul]

	* src/pgpinline.c
		remove noisy debug_print

2004-09-27 [colin]
	
	* src/pgpinline.c
		Look a bit deeper in the mail to find
		the "BEGIN PGP MESSAGE" boundary

2004-09-14 [colin]
	
	* src/pgpinline.c
		Fix unresolved symbol

2004-08-27 [colin]

	* src/plugin.c
		Fix plugin type

2004-08-26 [paul]

	* autogen.sh
	* configure.ac
	* Makefile.am
	* config/config.rpath	** REMOVED **
	* src/Makefile.am
		fix up autotools magick

2004-08-25 [colin]	0.2
	
	* src/pgpinline.c
	* src/sgpgme.c
	* src/sgpgme.h
		Handle combined encryption/signature